force-app/main/default/objects/ADM_Work_Commitment__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <referenceTo>ADM_Sprint__c</referenceTo>
    <relationshipLabel>Work Commitments</relationshipLabel>
    <relationshipName>Work_Commitments</relationshipName>
    <type>Lookup</type>
</CustomField>