force-app/main/default/objects/ADM_Work_Commitment__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>Work Commitments</relationshipLabel>
    <relationshipName>Work_Commitments</relationshipName>
    <type>Lookup</type>
</CustomField>